# pcap-stock-quote

./: bench.sh  build-and-run.sh  build-profiling.sh  pcap-stock-quote.cabal  run.sh  stack.yaml
app/: AttoPar.hs  Bench.hs  Binary.hs  FoldrChunks.hs  Gen.hs  Lib.hs  Main.hs  Parser.hs  QuoteParser.hs  Time.hs  Util.hs
