name:                pcap-stock-quote
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pcap-stock-quote#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pcap-stock-quote-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Util, Time, Parser, QuoteParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , bytestring
                     , heaps
                     , time
  default-language:    Haskell2010
